--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "debug": "nodemon ./bin/www"
   },
   "dependencies": {
+    "asciidoctor.js": "1.5.6",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "js-base64": "^2.4.5",
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11"
   }
