--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,8 @@
     "http-errors": "~1.6.2",
     "js-base64": "^2.4.5",
     "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "request": "^2.87.0",
+    "request-promise-native": "^1.0.5"
   }
 }
