--- a/app/package.json
+++ b/app/package.json
@@ -17,5 +17,10 @@
     "pug": "2.0.0-beta11",
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5"
+  },
+  "devDependencies": {
+    "eslint": "4.19.1",
+    "eslint-config-airbnb-base": "12.1.0",
+    "eslint-plugin-import": "2.12.0"
   }
 }
