--- a/app/package.json
+++ b/app/package.json
@@ -16,7 +16,8 @@
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11",
     "request": "^2.87.0",
-    "request-promise-native": "^1.0.5"
+    "request-promise-native": "^1.0.5",
+    "winston": "2.4.3"
   },
   "devDependencies": {
     "eslint": "4.19.1",
